[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/map.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/lunch_pad.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/main.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/pickups.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/pickup.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/FlatUI/kenneyUI-blue.tres" type="Theme" id=7]
[ext_resource path="res://scenes/barrel.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/cone.tscn" type="PackedScene" id=9]

[sub_resource type="PrismMesh" id=1]

[node name="main" type="Node"]
script = ExtResource( 3 )

[node name="display" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui" parent="display" instance=ExtResource( 4 )]
visible = false

[node name="menu" type="Control" parent="display"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.0
margin_right = 182.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_edit_ip" type="TextEdit" parent="display/menu"]
margin_top = 5.0
margin_right = 188.0
margin_bottom = 60.0
hint_tooltip = "IP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_edit_port" type="TextEdit" parent="display/menu"]
margin_left = 193.0
margin_top = 5.0
margin_right = 337.0
margin_bottom = 60.0
hint_tooltip = "PORT
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Button" parent="display/menu"]
margin_left = 1.0
margin_top = 64.0
margin_right = 337.0
margin_bottom = 114.251
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connect" type="Button" parent="display/menu"]
margin_left = 1.0
margin_top = 118.0
margin_right = 337.0
margin_bottom = 168.251
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="display/menu"]
margin_left = 1.0
margin_top = 172.0
margin_right = 337.0
margin_bottom = 222.251
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="map" parent="." instance=ExtResource( 1 )]

[node name="lunch_pad" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.999042, 0, -0.0437415, 0, 1, 0, 0.0437415, 0, -0.999042, 29.5802, 0, -1.754 )

[node name="characters" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )

[node name="mesh_instance" type="MeshInstance" parent="characters"]
transform = Transform( 1, 0, 0, 0, 0.0612053, -0.998125, 0, 0.998125, 0.0612053, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="ai_cars" type="Node" parent="."]

[node name="timer" type="Timer" parent="."]
autostart = true

[node name="pickups" parent="." instance=ExtResource( 5 )]

[node name="pickup" parent="pickups" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.3761, 0, 78.5839 )

[node name="pickup_2" parent="pickups" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 104.538, 0, 84.0971 )

[node name="pickup_3" parent="pickups" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 78.0741, 0, 157.952 )

[node name="pickup_4" parent="pickups" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -119.011, 0, 113.624 )

[node name="pickup_5" parent="pickups" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -46.22, 0, -137.537 )

[node name="pickup_6" parent="pickups" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -52.9, 0, -24.6268 )

[node name="pickup_7" parent="pickups" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 117.093, 0, -24.6268 )

[node name="pickup_8" parent="pickups" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 117.093, 0, -125.158 )

[node name="pickup_9" parent="pickups" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50.1625, 0, -114.895 )

[node name="output" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -18.0
text = "Output"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="obstacles" type="Spatial" parent="."]

[node name="barrel" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24.0341, 0.803673, -43.786 )

[node name="barrel_20" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24.0341, 0.803673, -40.4292 )

[node name="barrel_21" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.8764, 0.803673, -36.5743 )

[node name="barrel_2" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26.6359, 0.803673, -120.069 )

[node name="barrel_3" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25.473, 0.803673, -116.024 )

[node name="barrel_4" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.9211, 0.803673, -111.791 )

[node name="barrel_5" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 127.318, 0.803673, -111.791 )

[node name="barrel_6" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 127.318, 0.803673, -13.3942 )

[node name="barrel_7" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 113.859, 0.803673, 135.054 )

[node name="barrel_11" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 104.897, 0.803673, 165.871 )

[node name="barrel_12" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 101.779, 0.803673, 166.04 )

[node name="barrel_13" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 106.944, 0.803673, 167.036 )

[node name="barrel_8" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 60.1651, 0.803673, 166.98 )

[node name="barrel_14" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 49.5322, 0.803673, 150.537 )

[node name="barrel_9" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -141.947, 0.803673, 130.562 )

[node name="barrel_15" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -139.497, 0.803673, 133.757 )

[node name="barrel_16" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -139.497, 0.803673, 136.519 )

[node name="barrel_10" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -125.222, 0.803673, -43.7008 )

[node name="barrel_17" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -122.02, 0.803673, -43.7008 )

[node name="barrel_18" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -109.756, 0.803673, -36.4881 )

[node name="barrel_19" parent="obstacles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -97.3243, 0.803673, -43.7008 )

[node name="cone" parent="obstacles" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35.6771, 0, -108.596 )

[node name="cone_2" parent="obstacles" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35.6771, 0, -105.033 )

[node name="cone_3" parent="obstacles" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35.6771, 0, -96.6992 )

[node name="cone_4" parent="obstacles" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35.6771, 0, -96.6992 )

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
